# doclog

./: .gitignore  Cargo.toml  README.md
src/: constants.rs  levels.rs  lib.rs  log.rs  log_content.rs  logs.rs  printer.rs
src/blocks/: document.rs  header.rs  indent.rs  mod.rs  note.rs  plain_text.rs  prefix.rs  separator.rs  stack.rs  stack_trace.rs  step.rs  tag.rs  text.rs  title.rs
src/blocks/code/: mod.rs  section.rs
src/utils/: cursor.rs  mod.rs  text.rs  whitespaces.rs
src/utils/range_map/: mod.rs  range_wrapper.rs
tests/: make_owned.rs
