[package]
name = "doclog"
version = "0.1.1"
authors = ["Julio Treviño Páez <julio.tpaez@gmail.com>"]
description = "A Rust log library based on Rust's compiler logs"
repository = "https://github.com/juliotpaez/doclog"
documentation = "https://docs.rs/doclog"
readme = "README.md"
keywords = ["log", "rust"]
categories = ["development-tools::debugging"]
license = "MIT"
edition = "2021"

[dependencies]
bytecount = "0.6.3"
chrono = "0.4.19"
memchr = "2.5.0"
strip-ansi-escapes = "0.1.1"
yansi = "0.5.1"
