[package]
name = "doclog"
version = "0.2.0"
authors = ["Julio Treviño Páez <julio.tpaez@gmail.com>"]
description = "A Rust log library based on Rust's compiler logs"
repository = "https://github.com/juliotpaez/doclog"
documentation = "https://docs.rs/doclog"
readme = "README.md"
keywords = ["log", "rust"]
categories = ["development-tools::debugging"]
license = "MIT"
edition = "2021"

[dependencies]
bytecount = "0.6.8"
chrono = "0.4.38"
memchr = "2.7.4"
smallvec = "1.13.2"
strip-ansi-escapes = "0.2.0"
yansi = "1.0.1"
